--- a/apps/android-app/app/src/main/res/layout/header_sidebar.xml
+++ b/apps/android-app/app/src/main/res/layout/header_sidebar.xml
@@ -7,10 +7,9 @@
     android:paddingHorizontal="16dp">
 
     <TextView
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="EduClass"
+        android:text="@string/app_name"
         android:textSize="20sp"
         android:fontFamily="sans-serif"
         android:layout_weight="1" />
