--- a/apps/android-app/app/src/main/res/values/colors.xml
+++ b/apps/android-app/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_purple">#65548f</color>
+    <color name="gray">#3d3d3d</color>
 </resources>
