--- a/apps/android-app/app/src/main/res/layout/activity_main.xml
+++ b/apps/android-app/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add"
-            android:background="@drawable/rounded_full_button"
+            android:background="@drawable/bg_button"
             app:backgroundTint="@color/light_purple"
             android:layout_gravity="end|bottom"
             android:layout_margin="16dp"
