feat: add navigate to sign up screen

--- a/apps/android-app/app/src/main/res/layout/activity_sign_in.xml
+++ b/apps/android-app/app/src/main/res/layout/activity_sign_in.xml
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginBottom="16dp"
-            android:onClick="@{() -> viewModel.doSignIn()}"
+            android:onClick="@{() -> viewModel.signIn()}"
             android:text="@string/text_sign_in"
             app:cornerRadius="8dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -149,6 +149,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:onClick="@{()->viewModel.navigateToSignUp()}"
             android:text="@string/text_sign_up_prompt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
