--- a/apps/android-app/app/src/main/res/layout/activity_course.xml
+++ b/apps/android-app/app/src/main/res/layout/activity_course.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.edusuite.educlass.ui.home.HomeViewModel" />
+            type="com.edusuite.educlass.ui.course.CourseViewModel" />
     </data>
 
     <androidx.drawerlayout.widget.DrawerLayout
@@ -36,14 +36,14 @@
             </com.google.android.material.appbar.AppBarLayout>
 
             <!-- RecyclerView -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/homeCourseRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:padding="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/homeAppBarLayout"
-                app:visibility="@{ viewModel.courses.size() > 0 ? android.view.View.VISIBLE : android.view.View.GONE}" />
+            <!--            <androidx.recyclerview.widget.RecyclerView-->
+            <!--                android:id="@+id/homeCourseRecyclerView"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="0dp"-->
+            <!--                android:padding="8dp"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintTop_toBottomOf="@id/homeAppBarLayout"-->
+            <!--                app:visibility="@{ viewModel.posts.size() > 0 ? android.view.View.VISIBLE : android.view.View.GONE}" />-->
 
             <!-- Error Message -->
             <TextView
